--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,7 +2,7 @@ android {
     signingConfigs {
     }
     buildToolsVersion "23.0.3"
-    compileSdkVersion 23
+    compileSdkVersion 24
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -19,7 +19,8 @@ android {
     defaultConfig {
         applicationId "com.glm.texas.holdem.game"
         minSdkVersion 11
-        targetSdkVersion 23
+        targetSdkVersion 24
+        multiDexEnabled true
     }
 }
 // called every time gradle gets executed, takes the native dependencies of
@@ -69,36 +70,7 @@ task run(type: Exec) {
     def adb = path + "/platform-tools/adb"
     commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.glm.texas.holdem.game/com.glm.texas.holdem.game.AndroidLauncher'
 }
-// sets up the Android Eclipse project, using the old Ant based build.
-eclipse {
-    // need to specify Java source sets explicitly, SpringSource Gradle Eclipse plugin
-    // ignores any nodes added in classpath.file.withXml
-    sourceSets {
-        main {
-            java.srcDirs "src", 'gen'
-        }
-    }
 
-    jdt {
-        sourceCompatibility = 1.6
-        targetCompatibility = 1.6
-    }
-
-    classpath {
-        plusConfigurations += [project.configurations.compile]
-        containers 'com.android.ide.eclipse.adt.ANDROID_FRAMEWORK', 'com.android.ide.eclipse.adt.LIBRARIES'
-    }
-
-    project {
-        name = appName + "-android"
-        natures 'com.android.ide.eclipse.adt.AndroidNature'
-        buildCommands.clear();
-        buildCommand "com.android.ide.eclipse.adt.ResourceManagerBuilder"
-        buildCommand "com.android.ide.eclipse.adt.PreCompilerBuilder"
-        buildCommand "org.eclipse.jdt.core.javabuilder"
-        buildCommand "com.android.ide.eclipse.adt.ApkBuilder"
-    }
-}
 // sets up the Android Idea project, using the old Ant based build.
 idea {
     module {
