--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,4 +7,5 @@ eclipse.project {
 }
 dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.badlogicgames.gdx:gdx-backend-android:1.9.3'
 }
